--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,3 +1,57 @@
 .header {
-    width: 100%;
+    display: flex;
+    padding: 20px;
+    .logo {
+        font-weight: bold;
+        text-transform: uppercase;
+        color: #7fcee5;
+    }
+    .menuCntr {
+        margin-left: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        position: relative;
+        .menuBtn {
+            cursor: pointer;
+        }
+        .menu {
+            &.visible {
+                display: flex;
+                position:absolute;
+                top: 20px;
+            }
+            display: none;
+            flex-direction: column;
+            padding-left: 0px;
+            background-color: #333;
+            margin: 0px;
+            .link {
+                margin: 20px;
+                color: unset;
+                text-decoration: none;
+                white-space: nowrap;
+                &:hover {
+                    font-weight: bolder;
+                }
+                &.active{
+                    font-weight: bolder;
+                    color: #7fcec5;
+                }
+            } 
+        }
+        
+        
+        @media (min-width: 600px){
+            .menuBtn {
+                display: none;
+            }
+            .menu {
+                display: flex;
+                flex-direction: row;
+                background-color: unset;
+            }
+        }
+        
+    }
 }
