profile: add tech skills
Signed-off-by: Sujatha Pushparaj <supushpa@cisco.com>

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -33,6 +33,7 @@
                 white-space: nowrap;
                 &:hover {
                     font-weight: bolder;
+                    font-size: 15px;
                 }
                 &.active{
                     font-weight: bolder;
