--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -2,6 +2,11 @@
     flex-grow: 1;
     display: flex;
     align-items: center;
-    justify-content: center;
-    min-height: fit-content;
+    min-height: 0px;
+    flex-direction: column;
+    overflow: auto;
+    .note {
+        font-size: 36px;
+        text-align: center;
+    }
 }
