--- a/src/components/home/Home.module.scss
+++ b/src/components/home/Home.module.scss
@@ -3,7 +3,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: fit-content;
+    min-height: 0px;
+    overflow: auto;
     .wrapper {
         img {
             height: 200px;
