--- a/src/components/about/skills/Skills.module.scss
+++ b/src/components/about/skills/Skills.module.scss
@@ -1,6 +1,5 @@
 .skills {
     padding: 40px;
-    width: calc(100% - 40px);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -8,10 +7,12 @@
         font-size: 36px;
         color: #7fcee5;
         font-weight: bold;
+        align-self: center;
     }
     .cardCntr {
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
         .card {
             margin: 20px;
             background-color: black;
@@ -22,6 +23,7 @@
                 color: #7fcee5;
                 font-size: 20px;
                 margin-bottom: 16px;
+                text-shadow: 0 0 80px rgb(192 219 255 / 75%), 0 0 32px rgb(65 120 255 / 24%);
             }
             .skill {
                 display: flex;
@@ -32,12 +34,12 @@
         }
     }
     @media (max-width: 500px){
-        padding: 20px;
+        padding: 0px;
         .title {
             align-self: center;
         }
         .card {
-            margin: 10px;
+            margin: 20px auto !important;
         }
     }
 }
