--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,6 +1,7 @@
 .header {
     display: flex;
     padding: 20px;
+    z-index: 10;
     .logo {
         font-weight: bold;
         text-transform: uppercase;
